Fix: Add automatic Terraform file correction for AWS profile issue
- Added step to remove 'profile =' lines from .tf files
- Better error handling and outputs
- Enhanced logging for debugging

--- a/.github/workflows/deploy-template-complete.yml
+++ b/.github/workflows/deploy-template-complete.yml
@@ -164,7 +164,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       # ============================================
-      # 2. TERRAFORM - INFRAESTRUTURA
+      # 2. TERRAFORM - INFRAESTRUTURA (CORRIGIDO)
       # ============================================
       - name: Setup Terraform
         if: env.SKIP_TERRAFORM == 'false'
@@ -172,12 +172,33 @@ jobs:
         with:
           terraform_version: '~> 1.9.0'
 
+      - name: Corrigir arquivos Terraform (remove AWS profile)
+        if: env.SKIP_TERRAFORM == 'false'
+        shell: bash
+        run: |
+          echo "🔧 Corrigindo arquivos Terraform para GitHub Actions..."
+          
+          # Remove linhas com 'profile = ' de todos os arquivos .tf
+          find . -name "*.tf" -type f -exec grep -l "profile\s*=" {} \; | while read file; do
+            echo "  Corrigindo: $file"
+            # Remove linha com profile = qualquer-coisa
+            sed -i '/profile\s*=/d' "$file"
+            
+            # Adiciona região se não existir no provider aws
+            if grep -q 'provider "aws"' "$file" && ! grep -q 'region\s*=' "$file"; then
+              echo "  Adicionando região ao provider AWS em: $file"
+              sed -i '/provider "aws"/a \  region = var.aws_region' "$file"
+            fi
+          done
+          
+          echo "✅ Arquivos Terraform corrigidos com sucesso!"
+
       - name: Terraform Init
         if: env.SKIP_TERRAFORM == 'false'
         working-directory: ${{ env.TF_PATH }}
         run: |
           terraform init -upgrade -reconfigure
-          echo "Terraform inicializado em: ${{ env.TF_PATH }}"
+          echo "✅ Terraform inicializado em: ${{ env.TF_PATH }}"
 
       - name: Terraform Workspace
         if: env.SKIP_TERRAFORM == 'false' && inputs.terraform-workspace != ''
@@ -206,14 +227,15 @@ jobs:
         id: terraform-outputs
         working-directory: ${{ env.TF_PATH }}
         run: |
-          CLUSTER_NAME=$(terraform output -raw cluster_name)
-          CLUSTER_ENDPOINT=$(terraform output -raw cluster_endpoint)
+          CLUSTER_NAME=$(terraform output -raw cluster_name 2>/dev/null || echo "${{ env.PROJECT_NAME }}-${{ env.ENVIRONMENT }}")
+          CLUSTER_ENDPOINT=$(terraform output -raw cluster_endpoint 2>/dev/null || echo "")
           
           echo "cluster-name=${CLUSTER_NAME}" >> $GITHUB_OUTPUT
           echo "cluster-endpoint=${CLUSTER_ENDPOINT}" >> $GITHUB_OUTPUT
           
-          echo "Cluster: ${CLUSTER_NAME}"
-          echo "Endpoint: ${CLUSTER_ENDPOINT}"
+          echo "📊 Outputs do Terraform:"
+          echo "  Cluster: ${CLUSTER_NAME}"
+          echo "  Endpoint: ${CLUSTER_ENDPOINT}"
 
       # ============================================
       # 3. CONFIGURAR KUBECTL (após Terraform)
@@ -221,15 +243,18 @@ jobs:
       - name: Configurar kubectl
         if: env.SKIP_TERRAFORM == 'false' && (env.SKIP_BUILD == 'false' || env.SKIP_DEPLOY == 'false')
         run: |
-          CLUSTER_NAME="${{ steps.terraform-outputs.outputs.cluster-name || inputs.project-name }}-${{ env.ENVIRONMENT }}"
+          CLUSTER_NAME="${{ steps.terraform-outputs.outputs.cluster-name || env.PROJECT_NAME }}-${{ env.ENVIRONMENT }}"
+          
+          echo "🔧 Configurando kubectl para cluster: ${CLUSTER_NAME}"
           
           aws eks update-kubeconfig \
             --name "${CLUSTER_NAME}" \
             --region "${{ env.AWS_REGION }}"
           
-          echo "kubectl configurado para cluster: ${CLUSTER_NAME}"
+          echo "✅ kubectl configurado"
           
           # Verificar conexão
+          echo "🔍 Verificando conexão com cluster..."
           kubectl cluster-info
           kubectl get nodes
 
@@ -241,10 +266,13 @@ jobs:
         id: ecr-repo
         shell: bash
         run: |
+          echo "📦 Configurando repositório ECR..."
+          
           # Usar o registry informado ou criar baseado no account ID
           if [ -z "${{ env.ECR_REGISTRY }}" ]; then
             ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
             ECR_REGISTRY="${ACCOUNT_ID}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
+            echo "  Registry não informado, usando: ${ECR_REGISTRY}"
           else
             ECR_REGISTRY="${{ env.ECR_REGISTRY }}"
           fi
@@ -253,18 +281,26 @@ jobs:
           
           echo "ecr-registry=${ECR_REGISTRY}" >> $GITHUB_OUTPUT
           echo "ecr-repository=${ECR_REPO}" >> $GITHUB_OUTPUT
-          echo "ECR Registry: ${ECR_REGISTRY}"
-          echo "ECR Repository: ${ECR_REPO}"
+          
+          echo "✅ ECR Configurado:"
+          echo "  Registry: ${ECR_REGISTRY}"
+          echo "  Repository: ${ECR_REPO}"
 
       - name: Criar Repositório ECR (se necessário)
         if: env.SKIP_BUILD == 'false'
         shell: bash
         run: |
           ECR_REPO="${{ steps.ecr-repo.outputs.ecr-repository }}"
-          aws ecr describe-repositories --repository-names "${ECR_REPO}" >/dev/null 2>&1 || \
-          aws ecr create-repository --repository-name "${ECR_REPO}" --image-scanning-configuration scanOnPush=true
           
-          echo "Repositório ECR verificado/criado: ${ECR_REPO}"
+          echo "🔍 Verificando repositório ECR: ${ECR_REPO}"
+          
+          if aws ecr describe-repositories --repository-names "${ECR_REPO}" >/dev/null 2>&1; then
+            echo "✅ Repositório ECR já existe"
+          else
+            echo "📦 Criando repositório ECR..."
+            aws ecr create-repository --repository-name "${ECR_REPO}" --image-scanning-configuration scanOnPush=true
+            echo "✅ Repositório ECR criado"
+          fi
 
       - name: Login no Amazon ECR
         if: env.SKIP_BUILD == 'false'
@@ -287,13 +323,16 @@ jobs:
           echo "image-latest=${IMAGE_LATEST}" >> $GITHUB_OUTPUT
           echo "image-env-tag=${IMAGE_ENV_TAG}" >> $GITHUB_OUTPUT
           
-          echo "Imagem Version: ${IMAGE_VERSION}"
-          echo "Imagem Latest: ${IMAGE_LATEST}"
-          echo "Imagem Env Tag: ${IMAGE_ENV_TAG}"
+          echo "🏷️  Tags da Imagem:"
+          echo "  Version: ${IMAGE_VERSION}"
+          echo "  Latest: ${IMAGE_LATEST}"
+          echo "  Env Tag: ${IMAGE_ENV_TAG}"
 
       - name: Build Docker Image
         if: env.SKIP_BUILD == 'false'
         run: |
+          echo "🔨 Construindo imagem Docker..."
+          
           docker build -t "${{ steps.build-meta.outputs.image-version }}" \
             --build-arg ENVIRONMENT="${{ env.ENVIRONMENT }}" \
             --build-arg BUILD_NUMBER="${{ env.BUILD_NUMBER }}" \
@@ -302,16 +341,18 @@ jobs:
           docker tag "${{ steps.build-meta.outputs.image-version }}" "${{ steps.build-meta.outputs.image-latest }}"
           docker tag "${{ steps.build-meta.outputs.image-version }}" "${{ steps.build-meta.outputs.image-env-tag }}"
           
-          echo "Imagens construídas e taggeadas"
+          echo "✅ Imagens construídas e taggeadas"
 
       - name: Push Docker Image para ECR
         if: env.SKIP_BUILD == 'false'
         run: |
+          echo "📤 Enviando imagens para ECR..."
+          
           docker push "${{ steps.build-meta.outputs.image-version }}"
           docker push "${{ steps.build-meta.outputs.image-latest }}"
           docker push "${{ steps.build-meta.outputs.image-env-tag }}"
           
-          echo "Imagens pushadas para ECR"
+          echo "✅ Imagens enviadas para ECR"
 
       # ============================================
       # 5. DEPLOY - IMPLANTAR NO EKS
@@ -320,29 +361,30 @@ jobs:
         if: env.SKIP_BUILD == 'false' && env.SKIP_DEPLOY == 'false'
         shell: bash
         run: |
-          # Atualizar deployment.yaml com a nova imagem
+          echo "📝 Atualizando manifests com nova imagem..."
+          
           IMAGE_TAG="${{ steps.build-meta.outputs.image-version }}"
           
           # Para deployments usando kustomize
-          if [ -f "${{ env.K8S_MANIFEST_PATH }}/overlays/${{ env.K8S_OVERLAY }}/kustomization.yaml" ]; then
-            echo "Atualizando kustomization.yaml com nova imagem..."
+          if [ -f "${{ env.K8S_MANIFEST_PATH }}/overlays/${{ env.K8S_OVERLAY }}/kustomization.yaml" ]; then        
+            echo "  Atualizando kustomization.yaml..."
             sed -i "s|newTag: .*|newTag: \"${{ inputs.version-prefix }}.${{ env.BUILD_NUMBER }}\"|" \
               "${{ env.K8S_MANIFEST_PATH }}/overlays/${{ env.K8S_OVERLAY }}/kustomization.yaml"
           fi
           
           # Para deployments diretos
           if [ -f "${{ env.K8S_MANIFEST_PATH }}/manifests/deployment.yaml" ]; then
-            echo "Atualizando deployment.yaml com nova imagem..."
+            echo "  Atualizando deployment.yaml..."
             sed -i "s|image: .*|image: ${IMAGE_TAG}|" \
               "${{ env.K8S_MANIFEST_PATH }}/manifests/deployment.yaml"
           fi
           
-          echo "Manifests atualizados com imagem: ${IMAGE_TAG}"
+          echo "✅ Manifests atualizados com imagem: ${IMAGE_TAG}"
 
       - name: Aplicar Manifests Base Kubernetes
         if: env.SKIP_DEPLOY == 'false'
         run: |
-          echo "Aplicando manifests base..."
+          echo "🚀 Aplicando manifests base Kubernetes..."
           
           # Aplicar namespace e recursos base
           if [ -f "${{ env.K8S_MANIFEST_PATH }}/base/namespace.yaml" ]; then
@@ -354,86 +396,84 @@ jobs:
             kubectl apply -k "${{ env.K8S_MANIFEST_PATH }}/base/"
           fi
           
-          echo "Manifests base aplicados"
+          echo "✅ Manifests base aplicados"
 
       - name: Aplicar Overlay do Ambiente
         if: env.SKIP_DEPLOY == 'false'
         run: |
-          echo "Aplicando overlay do ambiente: ${{ env.K8S_OVERLAY }}"
+          echo "🎨 Aplicando overlay do ambiente: ${{ env.K8S_OVERLAY }}"
           
           OVERLAY_PATH="${{ env.K8S_MANIFEST_PATH }}/overlays/${{ env.K8S_OVERLAY }}"
           
           if [ -f "${OVERLAY_PATH}/kustomization.yaml" ]; then
             kubectl apply -k "${OVERLAY_PATH}/"
-            echo "Overlay aplicado via kustomize"
+            echo "✅ Overlay aplicado via kustomize"
           elif [ -d "${OVERLAY_PATH}" ]; then
             kubectl apply -f "${OVERLAY_PATH}/"
-            echo "Manifests do overlay aplicados"
+            echo "✅ Manifests do overlay aplicados"
           else
-            echo "Overlay não encontrado, pulando..."
+            echo "⚠️  Overlay não encontrado, pulando..."
           fi
 
       - name: Deployar Addons (Opcional)
         if: env.SKIP_DEPLOY == 'false' && env.DEPLOY_ADDONS == 'true'
         run: |
-          echo "Deployando addons..."
+          echo "🔧 Deployando addons..."
           
           # Kubernetes Dashboard
-          if [ -f "${{ env.K8S_MANIFEST_PATH }}/manifests/dashboard/kubernetes-dashboard-values.yaml" ]; then
-            echo "Instalando Kubernetes Dashboard..."
+          if [ -f "${{ env.K8S_MANIFEST_PATH }}/manifests/dashboard/kubernetes-dashboard-values.yaml" ]; then      
+            echo "  Instalando Kubernetes Dashboard..."
             helm upgrade --install kubernetes-dashboard \
               kubernetes-dashboard/kubernetes-dashboard \
               --namespace kubernetes-dashboard \
               --create-namespace \
-              --values "${{ env.K8S_MANIFEST_PATH }}/manifests/dashboard/kubernetes-dashboard-values.yaml" \
+              --values "${{ env.K8S_MANIFEST_PATH }}/manifests/dashboard/kubernetes-dashboard-values.yaml" \       
               --wait
+            echo "  ✅ Kubernetes Dashboard instalado"
           fi
           
           # Prometheus Stack
-          if [ -f "${{ env.K8S_MANIFEST_PATH }}/manifests/monitoring/kube-prometheus-stack-values.yaml" ]; then
-            echo "Instalando Prometheus Stack..."
+          if [ -f "${{ env.K8S_MANIFEST_PATH }}/manifests/monitoring/kube-prometheus-stack-values.yaml" ]; then    
+            echo "  Instalando Prometheus Stack..."
             helm upgrade --install monitoring \
               prometheus-community/kube-prometheus-stack \
               --namespace monitoring \
               --create-namespace \
-              --values "${{ env.K8S_MANIFEST_PATH }}/manifests/monitoring/kube-prometheus-stack-values.yaml" \
+              --values "${{ env.K8S_MANIFEST_PATH }}/manifests/monitoring/kube-prometheus-stack-values.yaml" \     
               --wait
+            echo "  ✅ Prometheus Stack instalado"
           fi
           
-          # Ingress Controller (se configurado)
-          if [ -f "${{ env.K8S_MANIFEST_PATH }}/manifests/ingress/nginx-ingress.yaml" ]; then
-            echo "Instalando Ingress Controller..."
-            kubectl apply -f "${{ env.K8S_MANIFEST_PATH }}/manifests/ingress/nginx-ingress.yaml"
-          fi
-          
-          echo "Addons deployados"
+          echo "✅ Addons deployados"
 
       - name: Health Check e Verificação
         if: env.SKIP_DEPLOY == 'false'
         run: |
-          echo "=== HEALTH CHECK DO CLUSTER ==="
+          echo "🏥 HEALTH CHECK DO CLUSTER"
+          echo "=========================="
           
           # Verificar nodes
-          echo "Nodes:"
+          echo ""
+          echo "📊 Nodes:"
           kubectl get nodes
           
           # Verificar pods
           echo ""
-          echo "Pods (todos os namespaces):"
+          echo "📦 Pods (todos os namespaces):"
           kubectl get pods -A
           
           # Verificar serviços
           echo ""
-          echo "Services:"
+          echo "🔌 Services:"
           kubectl get svc -A
           
           # Verificar deployments
           echo ""
-          echo "Deployments:"
+          echo "🚀 Deployments:"
           kubectl get deployments -A
           
           echo ""
-          echo "Health check completado!"
+          echo "✅ Health check completado!"
 
       # ============================================
       # 6. OUTPUT FINAL E RELATÓRIO
@@ -444,9 +484,10 @@ jobs:
           echo "          DEPLOYMENT COMPLETED            "
           echo "=========================================="
           echo ""
-          echo "Environment: ${{ env.ENVIRONMENT }}"
-          echo "Project: ${{ env.PROJECT_NAME }}"
-          echo "AWS Region: ${{ env.AWS_REGION }}"
+          echo "🌍 Environment: ${{ env.ENVIRONMENT }}"
+          echo "📁 Project: ${{ env.PROJECT_NAME }}"
+          echo "📍 AWS Region: ${{ env.AWS_REGION }}"
+          echo "🔄 Build Number: ${{ env.BUILD_NUMBER }}"
           echo ""
           
           if [ "${{ env.SKIP_TERRAFORM }}" = "false" ]; then
