--- a/.github/workflows/build-template-aws.yml
+++ b/.github/workflows/build-template-aws.yml
@@ -3,28 +3,16 @@ name: Build Template AWS (ECR)
 on:
   workflow_call:
     inputs:
-      build-id:
-        description: "ID da build"
-        required: true
-        type: string
       environment:
-        description: "Environment"
-        required: true
-        type: string
-      namespace:
-        description: "Namespace (mantido por padrão de pipeline)"
-        required: true
-        type: string
-      project:
-        description: "Project"
-        required: true
-        type: string
-      registry:
-        description: "ECR Registry (ex: 123456789012.dkr.ecr.us-east-1.amazonaws.com)"
+        description: "dev | hom | prod"
         required: true
         type: string
       aws-region:
         description: "AWS Region"
+        required: true
+        type: string
+      ecr-repository:
+        description: "Nome do repo no ECR (ex: org-app)"
         required: true
         type: string
       dockerfile-path:
@@ -37,90 +25,96 @@ on:
         required: false
         type: string
         default: "."
-      version-prefix:
-        description: "Prefixo de versão"
+      create-repo:
+        description: "Criar repo no ECR se não existir"
+        required: false
+        type: boolean
+        default: true
+      tag-strategy:
+        description: "sha | run_number"
         required: false
         type: string
-        default: "0.0"
+        default: "sha"
 
     outputs:
-      image-version:
-        description: "Tag versionada gerada"
-        value: ${{ jobs.Build_And_Push_to_ECR.outputs.image-version }}
-      image-latest:
-        description: "Tag latest gerada"
-        value: ${{ jobs.Build_And_Push_to_ECR.outputs.image-latest }}
-      ecr-repository:
-        description: "Nome do repositório criado/usado no ECR"
-        value: ${{ jobs.Build_And_Push_to_ECR.outputs.ecr-repository }}
-
-env:
-  environment: ${{ inputs.environment }}
-  namespace: ${{ inputs.namespace }}
-  project: ${{ inputs.project }}
-  registry: ${{ inputs.registry }}
+      image-uri:
+        description: "Image URI versionada"
+        value: ${{ jobs.build.outputs.image-uri }}
+      image-latest-uri:
+        description: "Image URI latest do ambiente"
+        value: ${{ jobs.build.outputs.image-latest-uri }}
+      image-tag:
+        description: "Tag versionada usada"
+        value: ${{ jobs.build.outputs.image-tag }}
+      registry:
+        description: "Registry do ECR"
+        value: ${{ jobs.build.outputs.registry }}
 
 jobs:
-  Build_And_Push_to_ECR:
-    name: Build and Push to ECR
+  build:
     runs-on: ubuntu-latest
-    env:
-      BUILD_NUMBER: ${{ github.run_number }}
 
     outputs:
-      image-version: ${{ steps.meta.outputs.image-version }}
-      image-latest: ${{ steps.meta.outputs.image-latest }}
-      ecr-repository: ${{ steps.repo.outputs.ecr-repository }}
+      image-uri: ${{ steps.out.outputs.image-uri }}
+      image-latest-uri: ${{ steps.out.outputs.image-latest-uri }}
+      image-tag: ${{ steps.out.outputs.image-tag }}
+      registry: ${{ steps.login-ecr.outputs.registry }}
 
     steps:
-      - name: Checkout Código
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials (Access Keys)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ inputs.aws-region }}
 
-      - name: Definir repositório ECR (padrão environment/project)
-        id: repo
-        shell: bash
-        run: |
-          ECR_REPO="${{ inputs.environment }}/${{ inputs.project }}"
-          echo "ecr-repository=${ECR_REPO}" >> $GITHUB_OUTPUT
-
-      - name: Garantir repositório no ECR
-        shell: bash
-        run: |
-          ECR_REPO="${{ steps.repo.outputs.ecr-repository }}"
-          aws ecr describe-repositories --repository-names "${ECR_REPO}" >/dev/null 2>&1 || \
-          aws ecr create-repository --repository-name "${ECR_REPO}" >/dev/null
-
-      - name: Login no Amazon ECR
+      - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Definir tags da imagem
-        id: meta
+      - name: Ensure ECR repository exists
+        if: ${{ inputs.create-repo }}
         shell: bash
         run: |
-          VERSION="${{ inputs.version-prefix }}.${BUILD_NUMBER}"
+          set -e
+          aws ecr describe-repositories --repository-names "${{ inputs.ecr-repository }}" >/dev/null 2>&1 || \
+          aws ecr create-repository --repository-name "${{ inputs.ecr-repository }}" >/dev/null
 
-          IMAGE_VERSION="${{ env.registry }}/${{ steps.repo.outputs.ecr-repository }}:${VERSION}"
-          IMAGE_LATEST="${{ env.registry }}/${{ steps.repo.outputs.ecr-repository }}:latest"
-
-          echo "image-version=${IMAGE_VERSION}" >> $GITHUB_OUTPUT
-          echo "image-latest=${IMAGE_LATEST}" >> $GITHUB_OUTPUT
-
-      - name: Build Docker Image
+      - name: Build and Push
+        id: out
+        shell: bash
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPO: ${{ inputs.ecr-repository }}
+          ENVIRONMENT: ${{ inputs.environment }}
+          TAG_STRATEGY: ${{ inputs.tag-strategy }}
+          DOCKERFILE: ${{ inputs.dockerfile-path }}
+          CONTEXT: ${{ inputs.context }}
         run: |
-          docker build -t "${{ steps.meta.outputs.image-version }}" \
-            --build-arg ENVIRONMENT="${{ env.environment }}" \
-            -f "${{ inputs.dockerfile-path }}" "${{ inputs.context }}"
+          set -e
 
-          docker tag "${{ steps.meta.outputs.image-version }}" "${{ steps.meta.outputs.image-latest }}"
+          if [ "$TAG_STRATEGY" = "run_number" ]; then
+            VERSION_TAG="${ENVIRONMENT}-${GITHUB_RUN_NUMBER}"
+          else
+            VERSION_TAG="${ENVIRONMENT}-${GITHUB_SHA}"
+          fi
 
-      - name: Push Docker Image para o ECR
-        run: |
-          docker push "${{ steps.meta.outputs.image-version }}"
-          docker push "${{ steps.meta.outputs.image-latest }}"
+          LATEST_TAG="${ENVIRONMENT}-latest"
+
+          IMAGE_URI="$REGISTRY/$REPO:$VERSION_TAG"
+          IMAGE_LATEST_URI="$REGISTRY/$REPO:$LATEST_TAG"
+
+          echo "Building: $IMAGE_URI"
+          docker build -t "$IMAGE_URI" -f "$DOCKERFILE" "$CONTEXT"
+
+          docker tag "$IMAGE_URI" "$IMAGE_LATEST_URI"
+
+          docker push "$IMAGE_URI"
+          docker push "$IMAGE_LATEST_URI"
+
+          echo "image-uri=$IMAGE_URI" >> $GITHUB_OUTPUT
+          echo "image-latest-uri=$IMAGE_LATEST_URI" >> $GITHUB_OUTPUT
+          echo "image-tag=$VERSION_TAG" >> $GITHUB_OUTPUT
