--- a/.github/workflows/build-template-aws.yml
+++ b/.github/workflows/build-template-aws.yml
@@ -4,117 +4,82 @@ on:
   workflow_call:
     inputs:
       environment:
-        description: "dev | hom | prod"
+        required: true
+        type: string
+      project:
         required: true
         type: string
       aws-region:
-        description: "AWS Region"
         required: true
         type: string
-      ecr-repository:
-        description: "Nome do repo no ECR (ex: org-app)"
+      registry:
         required: true
         type: string
       dockerfile-path:
-        description: "Path do Dockerfile"
         required: false
         type: string
         default: "Dockerfile"
       context:
-        description: "Build context"
         required: false
         type: string
         default: "."
-      create-repo:
-        description: "Criar repo no ECR se não existir"
-        required: false
-        type: boolean
-        default: true
-      tag-strategy:
-        description: "sha | run_number"
+      version-prefix:
         required: false
         type: string
-        default: "sha"
-
+        default: "0.0"
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
     outputs:
-      image-uri:
-        description: "Image URI versionada"
-        value: ${{ jobs.build.outputs.image-uri }}
-      image-latest-uri:
-        description: "Image URI latest do ambiente"
-        value: ${{ jobs.build.outputs.image-latest-uri }}
-      image-tag:
-        description: "Tag versionada usada"
-        value: ${{ jobs.build.outputs.image-tag }}
-      registry:
-        description: "Registry do ECR"
-        value: ${{ jobs.build.outputs.registry }}
+      image:
+        description: "Imagem gerada (tag versionada)"
+        value: ${{ jobs.build.outputs.image }}
+
+env:
+  environment: ${{ inputs.environment }}
+  project: ${{ inputs.project }}
+  registry: ${{ inputs.registry }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     outputs:
-      image-uri: ${{ steps.out.outputs.image-uri }}
-      image-latest-uri: ${{ steps.out.outputs.image-latest-uri }}
-      image-tag: ${{ steps.out.outputs.image-tag }}
-      registry: ${{ steps.login-ecr.outputs.registry }}
+      image: ${{ steps.meta.outputs.image }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Configure AWS credentials (Access Keys)
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ inputs.aws-region }}
 
+      - name: Ensure ECR repo exists (env/project)
+        id: repo
+        shell: bash
+        run: |
+          ECR_REPO="${{ inputs.environment }}/${{ inputs.project }}"
+          echo "ECR_REPO=$ECR_REPO" >> $GITHUB_ENV
+          aws ecr describe-repositories --repository-names "$ECR_REPO" >/dev/null 2>&1 || \
+            aws ecr create-repository --repository-name "$ECR_REPO" >/dev/null
+
       - name: Login to Amazon ECR
-        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Ensure ECR repository exists
-        if: ${{ inputs.create-repo }}
+      - name: Define image tag (versioned)
+        id: meta
         shell: bash
         run: |
-          set -e
-          aws ecr describe-repositories --repository-names "${{ inputs.ecr-repository }}" >/dev/null 2>&1 || \
-          aws ecr create-repository --repository-name "${{ inputs.ecr-repository }}" >/dev/null
+          VERSION="${{ inputs.version-prefix }}.${{ github.run_number }}"
+          IMAGE="${{ inputs.registry }}/${ECR_REPO}:${VERSION}"
+          echo "image=$IMAGE" >> $GITHUB_OUTPUT
 
-      - name: Build and Push
-        id: out
+      - name: Build & Push
         shell: bash
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPO: ${{ inputs.ecr-repository }}
-          ENVIRONMENT: ${{ inputs.environment }}
-          TAG_STRATEGY: ${{ inputs.tag-strategy }}
-          DOCKERFILE: ${{ inputs.dockerfile-path }}
-          CONTEXT: ${{ inputs.context }}
         run: |
-          set -e
-
-          if [ "$TAG_STRATEGY" = "run_number" ]; then
-            VERSION_TAG="${ENVIRONMENT}-${GITHUB_RUN_NUMBER}"
-          else
-            VERSION_TAG="${ENVIRONMENT}-${GITHUB_SHA}"
-          fi
-
-          LATEST_TAG="${ENVIRONMENT}-latest"
-
-          IMAGE_URI="$REGISTRY/$REPO:$VERSION_TAG"
-          IMAGE_LATEST_URI="$REGISTRY/$REPO:$LATEST_TAG"
-
-          echo "Building: $IMAGE_URI"
-          docker build -t "$IMAGE_URI" -f "$DOCKERFILE" "$CONTEXT"
-
-          docker tag "$IMAGE_URI" "$IMAGE_LATEST_URI"
-
-          docker push "$IMAGE_URI"
-          docker push "$IMAGE_LATEST_URI"
-
-          echo "image-uri=$IMAGE_URI" >> $GITHUB_OUTPUT
-          echo "image-latest-uri=$IMAGE_LATEST_URI" >> $GITHUB_OUTPUT
-          echo "image-tag=$VERSION_TAG" >> $GITHUB_OUTPUT
+          docker build -t "${{ steps.meta.outputs.image }}" -f "${{ inputs.dockerfile-path }}" "${{ inputs.context }}"
+          docker push "${{ steps.meta.outputs.image }}"
