--- a/.github/workflows/deploy-template-eks.yml
+++ b/.github/workflows/deploy-template-eks.yml
@@ -4,49 +4,33 @@ on:
   workflow_call:
     inputs:
       aws-region:
-        description: "AWS Region"
         required: true
         type: string
       eks-cluster-name:
-        description: "Nome do cluster EKS"
-        required: true
-        type: string
-      manifest-path:
-        description: "Pasta/arquivo de manifests"
         required: true
         type: string
       namespace:
-        description: "Namespace Kubernetes"
         required: true
         type: string
-      deployment-name:
-        description: "Deployment para rollout"
+      manifest-path:
         required: true
         type: string
-      container-name:
-        description: "Nome do container no deployment"
-        required: true
-        type: string
-      image-uri:
-        description: "Se informado, faz kubectl set image"
+      image:
         required: false
         type: string
-        default: ""
-      rollout-timeout:
-        description: "Timeout rollout"
-        required: false
-        type: string
-        default: "180s"
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Configure AWS credentials (Access Keys)
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -55,27 +39,17 @@ jobs:
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig \
-            --name "${{ inputs.eks-cluster-name }}" \
-            --region "${{ inputs.aws-region }}"
+          aws eks update-kubeconfig --name "${{ inputs.eks-cluster-name }}" --region "${{ inputs.aws-region }}"
 
       - name: Apply manifests
         run: |
           kubectl apply -f "${{ inputs.manifest-path }}"
 
-      - name: Set image (optional)
-        if: ${{ inputs.image-uri != '' }}
+      - name: Optional set image (if provided)
+        if: ${{ inputs.image != '' }}
         run: |
-          kubectl set image deployment/${{ inputs.deployment-name }} \
-            -n ${{ inputs.namespace }} \
-            ${{ inputs.container-name }}=${{ inputs.image-uri }}
+          kubectl set image deployment/echo -n "${{ inputs.namespace }}" echo="${{ inputs.image }}"
 
       - name: Rollout status
         run: |
-          kubectl rollout status deployment/${{ inputs.deployment-name }} \
-            -n ${{ inputs.namespace }} \
-            --timeout=${{ inputs.rollout-timeout }}
-
-      - name: Show ingress
-        run: |
-          kubectl get ingress -n ${{ inputs.namespace }} -o wide || true
+          kubectl rollout status deployment/echo -n "${{ inputs.namespace }}" --timeout=180s
