--- a/.github/workflows/deploy-template-eks.yml
+++ b/.github/workflows/deploy-template-eks.yml
@@ -18,6 +18,7 @@ on:
       image:
         required: false
         type: string
+        default: ""
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
@@ -27,6 +28,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -39,17 +41,23 @@ jobs:
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig --name "${{ inputs.eks-cluster-name }}" --region "${{ inputs.aws-region }}"
+          aws eks update-kubeconfig \
+            --name "${{ inputs.eks-cluster-name }}" \
+            --region "${{ inputs.aws-region }}"
 
       - name: Apply manifests
         run: |
           kubectl apply -f "${{ inputs.manifest-path }}"
 
-      - name: Optional set image (if provided)
+      - name: Set image (if provided)
         if: ${{ inputs.image != '' }}
         run: |
-          kubectl set image deployment/echo -n "${{ inputs.namespace }}" echo="${{ inputs.image }}"
+          kubectl set image deployment/echo \
+            -n "${{ inputs.namespace }}" \
+            echo="${{ inputs.image }}"
 
       - name: Rollout status
         run: |
-          kubectl rollout status deployment/echo -n "${{ inputs.namespace }}" --timeout=180s
+          kubectl rollout status deployment/echo \
+            -n "${{ inputs.namespace }}" \
+            --timeout=180s
