--- a/.github/workflows/deploy-template-eks.yml
+++ b/.github/workflows/deploy-template-eks.yml
@@ -1,4 +1,4 @@
-name: Deploy Template AWS (EKS)
+name: 🚀 Deploy Template AWS (EKS)
 
 on:
   workflow_call:
@@ -26,21 +26,21 @@ on:
 
 jobs:
   deploy:
-    name: Deploy (kubectl apply)
+    name: ☸️ Deploy → EKS
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
+      - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ inputs.aws-region }}
 
-      - name: Update kubeconfig
+      - name: 🧭 Update kubeconfig
         shell: bash
         run: |
           set -euo pipefail
@@ -49,14 +49,14 @@ jobs:
             --region "${{ inputs.aws-region }}"
           kubectl version --client=true
 
-      - name: Apply manifests
+      - name: 📦 Apply manifests
         shell: bash
         run: |
           set -euo pipefail
           echo "Applying manifests from: ${{ inputs.manifest-path }}"
           kubectl apply -f "${{ inputs.manifest-path }}"
 
-      - name: Set image (optional)
+      - name: 🖼️ Set image (optional)
         if: ${{ inputs.image != '' }}
         shell: bash
         run: |
@@ -64,7 +64,7 @@ jobs:
           echo "Setting image on deployment/echo in ns '${{ inputs.namespace }}' => '${{ inputs.image }}'"
           kubectl set image deployment/echo -n "${{ inputs.namespace }}" echo="${{ inputs.image }}"
 
-      - name: Rollout status
+      - name: ⏱️ Rollout status
         shell: bash
         run: |
           set -euo pipefail
